--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-content" style="max-width:1500px">
+<div class="w3-content w3-margin-0" style="max-width:1600px">
 
   <!-- Header -->
-  <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="teamgladios.html" class="w3-left w3-button w3-white w3-hover-white w3-hover-text-green">Enhancing Humanity with Mobile Devices and Mobile Device Dependency</a>
-    <a href="#about" class="w3-right w3-button w3-white w3-hover-white w3-hover-text-green">Team Gladios</a>
+  <header class="w3-container w3-xlarge w3-padding-16 w3-green">
+    <a href="teamgladios.html" class="w3-left w3-button w3-green w3-hover-green w3-hover-text-black">Enhancing Humanity with Mobile Devices and Mobile Device Dependency</a>
+    <a href="#about" class="w3-right w3-button w3-green w3-hover-green w3-hover-text-black">Team Gladios</a>
   </header>
+
+  <!-- Background Image -->
+  <div class="w3-row"><img class="w3-image" src="images/placeholder_2.jpg" style="width:100%" alt="Image">
+  </div>
 
   <!-- Team Grid -->
   <div class="w3-row">
